--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body{
     background-color: darkgray;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 div{
     padding: 0px;
@@ -16,14 +17,18 @@ div{
     flex-direction: column;
     gap: 40px;
     width: 30vw;
+    border-radius: 6px;
+    border: 4px solid black;
+    padding: 1%;
+    background-image: linear-gradient(to bottom right, #385170, #9fd3c7);
 }
 .output{
     display: flex;
     justify-content: right;
     width: 30vw;
     height: 10vh;
-    border-radius: 2px;
-    background-color: antiquewhite;
+    border-radius: 6px;
+    background-color: white;
 }
 .input{
     display:flex;
@@ -39,20 +44,24 @@ div{
 .numButtons{
     display: grid;
     border-style: solid;
-    background-color: gray;
+    border-radius: 6px;
+}
+.numButtons:active{
+    filter: brightness(0.4);
 }
 .operators{
     display: grid;
     grid-template-rows: 1fr 2fr 2fr;
     border-style: solid;
-    background-color: bisque;
+    background-image: linear-gradient(bisque, antiquewhite)
    
 }
 .operatorsGrid{
     display: grid;
     grid-template-rows: 1fr 2fr 2fr;
-    background-color: bisque;
+    background-image: linear-gradient(bisque, antiquewhite);
     width:7vw;
+    border-radius: 6px;
 }
 #zeroBtn{
     grid-column-start: 1;
@@ -60,18 +69,18 @@ div{
 }
 #divide{
     grid-column-start: 2;
-    background-color: bisque;
+    background-image: linear-gradient(bisque, antiquewhite);
 }
 #multiply{
-    background-color: bisque;
+    background-image: linear-gradient(bisque, antiquewhite);
 }
 #clearBtn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 14px;
-    width: 80vw;
-    height: 6vh;
-    border-radius: 2px;
-    background-color: rgb(51, 43, 43);
+    border: 1px solid black;
+    background-image: linear-gradient(to bottom right, bisque, antiquewhite);
+}
+.btnMagic{
+    background-color: aqua;
+}
+#clearBtn{
+    border: 2px solid black;
 }
