--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ div{
     display: flex;
     flex-direction: column;
     gap: 40px;
-    width: 30vw;
+    width: 28vw;
     border-radius: 6px;
     border: 4px solid black;
     padding: 1%;
@@ -25,7 +25,7 @@ div{
 .output{
     display: flex;
     justify-content: right;
-    width: 30vw;
+    width: 28vw;
     height: 10vh;
     border-radius: 6px;
     background-color: white;
@@ -47,7 +47,7 @@ div{
     border-radius: 6px;
 }
 .numButtons:active{
-    filter: brightness(0.4);
+    background-color: #ececec;
 }
 .operators{
     display: grid;
@@ -63,6 +63,12 @@ div{
     width:7vw;
     border-radius: 6px;
 }
+.ops:active{
+   filter: brightness(.4);
+}
+.opsMagic{
+    filter: brightness(.4);
+}
 #zeroBtn{
     grid-column-start: 1;
     grid-column-end: 3;
@@ -77,10 +83,14 @@ div{
 #clearBtn{
     border: 1px solid black;
     background-image: linear-gradient(to bottom right, bisque, antiquewhite);
+    align-items: center;
+    justify-content: center;
 }
 .btnMagic{
-    background-color: aqua;
+    background-color: #ececec;
 }
 #clearBtn{
     border: 2px solid black;
+    align-items: center;
+    justify-content: center;
 }
