--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,8 @@ div{
     display:flex;
     height: 60vh;
     border-radius: 2px;
-   
+    text-align: center;
+    font-size: 16px;
 }
 .numButtonsGrid{
     display: grid;
@@ -45,6 +46,8 @@ div{
     display: grid;
     border-style: solid;
     border-radius: 6px;
+    align-items: center;
+    justify-content: center;
 }
 .numButtons:active{
     background-color: #ececec;
@@ -53,8 +56,7 @@ div{
     display: grid;
     grid-template-rows: 1fr 2fr 2fr;
     border-style: solid;
-    background-image: linear-gradient(bisque, antiquewhite)
-   
+    background-image: linear-gradient(bisque, antiquewhite); 
 }
 .operatorsGrid{
     display: grid;
@@ -65,6 +67,11 @@ div{
 }
 .ops:active{
    filter: brightness(.4);
+}
+.ops{
+    display: grid;
+    align-items: center;
+    justify-content: center;
 }
 .opsMagic{
     filter: brightness(.4);
@@ -81,16 +88,22 @@ div{
     background-image: linear-gradient(bisque, antiquewhite);
 }
 #clearBtn{
-    border: 1px solid black;
+    border: 2px solid black;
+    border-radius: 2px;
     background-image: linear-gradient(to bottom right, bisque, antiquewhite);
-    align-items: center;
-    justify-content: center;
 }
 .btnMagic{
     background-color: #ececec;
 }
-#clearBtn{
-    border: 2px solid black;
-    align-items: center;
-    justify-content: center;
+#add{
+    display: flex;
+    align-content:space-between;
+}
+#subtract{
+    display: flex;
+    align-content: space-between;
+}
+#equals{
+    display: flex;
+    align-content: space-between;
 }
